# keypoints

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODING_STYLE.md  DEV_LOG.md  Makefile  PROMPT_GUIDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  sitecustomize.py  基本設計.md  基本設計_概略.md  要件.md  要件_ベース.md  詳細設計.md  詳細設計_概略.md
.github/prompts/: CODING_STYLE.md  PROMPT_GUIDE.md  STANDARD_DEVELOPMENT_FLOW.md  python.instructions.japanese.md
.github/workflows/: ci.yml
ProgramName/: main.py
ProgramName/common/: base_exception.py  logging_setup.py
ProgramName/resources/: ApplicationConfig.xml
ProgramName/tests/integration/: test_placeholder.py
ProgramName/tests/unit/: test_smoke.py
app/: __init__.py  main.py
app/resources/: ApplicationConfig.xml
app/scripts/: __init__.py
app/scripts/config/: __init__.py  loader.py
app/scripts/core/: __init__.py  aggregator.py  errors.py  logging_setup.py  messages.py  metrics.py  orchestrator.py  process_worker_entry.py  utils_time.py  worker.py
app/tests/integration/: test_cli_smoke.py
app/tests/unit/: test_additional_coverage.py  test_aggregator.py  test_aggregator_stats.py  test_config_loader.py  test_logging_setup.py  test_messages.py  test_metrics_thread.py  test_orchestrator.py  test_orchestrator_ping_rtt.py  test_orchestrator_process_terminate.py  test_orchestrator_stop_exitnotice.py  test_orchestrator_stop_exitnotice_process.py  test_ping_down_transition.py  test_ping_health.py  test_process_mode_basic.py  test_utils_time.py  test_worker.py
resources/: ApplicationConfig.xml
