[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "programname"
version = "0.1.0"
description = "Sample project scaffold following CODING_STYLE.md"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC", "S", "C4"]
ignore = ["E203", "W503"]

[tool.ruff.isort]
known-first-party = ["ProgramName"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["ProgramName/tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[tool.coverage.run]
source = ["ProgramName"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
